# speml-dl-fingerprint

./: .gitignore  .gitmodules  README.md  environment.yml  environment_cpu.yml  hello.py  pyproject.toml  results.csv  run_pipeline.py  structure.py
config/: experiment_params.yaml  watermark_params.yaml
models/: fashionmnist_baseline.pth  fashionmnist_scratch_baseline.pth  fashionmnist_scratch_watermarked.pth  fashionmnist_watermarked.pth  mnist_baseline.pth  mnist_scratch_baseline.pth  mnist_scratch_watermarked.pth  mnist_watermarked.pth
models/attacked/: fashionmnist_ftal_attacked.pth  fashionmnist_ftll_attacked.pth  fashionmnist_rtal_attacked.pth  fashionmnist_rtll_attacked.pth  fashionmnist_scratch_ftal_attacked.pth  fashionmnist_scratch_ftll_attacked.pth  fashionmnist_scratch_rtal_attacked.pth  fashionmnist_scratch_rtll_attacked.pth  mnist_ftal_attacked.pth  mnist_ftll_attacked.pth  mnist_rtal_attacked.pth  mnist_rtll_attacked.pth  mnist_scratch_ftal_attacked.pth  mnist_scratch_ftll_attacked.pth  mnist_scratch_rtal_attacked.pth  mnist_scratch_rtll_attacked.pth
notebooks/: 02_model_training_baseline.ipynb  03_watermark_embedding_dev.ipynb  04_evaluation_dev.ipynb  attacks.ipynb  evaluate.ipynb  training_fromscratch.ipynb
notebooks/models/: MNIST_triggerset1_FTAL.pth  (+15 more)
results/: .gitkeep
src/: attack.py  checkCuda.py  data_loader.py  dataloader.py  datasetold.py  embed_watermark.py  evaluate.py  run_attack.py  run_experiment.py  train.py  train_baseline.py  verify_watermark.py
tests/: test_data_loader.py  test_models.py  test_watermarking_chosen_technique.py
(+27 files in other folders)
