[project]
name = "speml-dl-fingerprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
]
